test/langtools/tools/javac/enum/NestedEnum.out
NestedEnum.java:12:9: compiler.err.enums.must.be.static
1 error
